# rules_oci

./: MODULE.bazel  fetch.bzl
.github/workflows/: release.yml
cosign/private/: versions.bzl
e2e/assertion/: MODULE.bazel
examples/: BUILD.bazel
examples/dockerfile/: MODULE.bazel  buildx.bzl
examples/image_index/: BUILD.bazel
oci/: dependencies.bzl  pull.bzl  repositories.bzl
oci/private/: toolchains_repo.bzl  versions.bzl
tools/: tools.lock.json
