"bazel-contrib/rules_oci"

module(
    name = "rules_oci",
    compatibility_level = 1,
)

bazel_dep(name = "aspect_bazel_lib", version = "2.7.10")
bazel_dep(name = "bazel_features", version = "1.10.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "tar.bzl", version = "0.7.0")


archive_override(
    module_name = "aspect_bazel_lib",
    urls = ["https://github.com/ffgan/bazel-lib/releases/download/v2.7.10/bazel-lib-v2.7.10.tar.gz"],
    strip_prefix = "bazel-lib-2.7.10",
    integrity = "sha256-ZEfemieFl71vyiGXN4Sf7OtK2XSpRm+HPKXuFdyJ94A=",
)

oci = use_extension("//oci:extensions.bzl", "oci")
oci.toolchains()
use_repo(oci, "oci_crane_toolchains", "oci_regctl_toolchains")

register_toolchains("@oci_crane_toolchains//:all", "@oci_regctl_toolchains//:all")

# Workaround https://github.com/aspect-build/bazel-lib/pull/832
zstd = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
zstd.zstd()
use_repo(zstd, "zstd_toolchains")

register_toolchains("@zstd_toolchains//:all")

bazel_lib = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
bazel_lib.jq()
use_repo(bazel_lib, "jq_toolchains")

tar = use_extension("@tar.bzl//tar:extensions.bzl", "toolchains")
use_repo(tar, "bsd_tar_toolchains")

register_toolchains("@bsd_tar_toolchains//:all")

# Dev dependencies

bazel_dep(name = "bazel_env.bzl", version = "0.3.1", dev_dependency = True)
bazel_dep(name = "rules_go", version = "0.59.0", dev_dependency = True, repo_name = "io_bazel_rules_go")
bazel_dep(name = "gazelle", version = "0.35.0", dev_dependency = True, repo_name = "bazel_gazelle")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.4.1", dev_dependency = True)
bazel_dep(name = "rules_multirun", version = "0.9.0", dev_dependency = True)
bazel_dep(name = "stardoc", version = "0.6.2", dev_dependency = True, repo_name = "io_bazel_stardoc")
bazel_dep(name = "rules_multitool", version = "1.3.1", dev_dependency = True)


archive_override(
    module_name = "rules_multitool",
    urls = ["https://github.com/ffgan/rules_multitool/releases/download/v1.3.1/rules_multitool-1.3.1.tar.gz"],
    strip_prefix = "rules_multitool-1.3.1",
    integrity = "sha256-YTCeRAR0L5Wrrxq1a+DFonVyR43rikTf6bGgFKZkWEs=",
)

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool", dev_dependency = True)
multitool.hub(lockfile = "//tools:tools.lock.json")
use_repo(multitool, "multitool")
